--- a/pom.xml
+++ b/pom.xml
@@ -100,17 +100,34 @@
 			<artifactId>rest-assured</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.5.4</version>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 
 	<build>
-
+        <outputDirectory>${basedir}/target/test-classes/com/SDETTEST/SDETTest</outputDirectory>
 		<resources>
-			<resource>
-				<directory>src/main/java/com/SDETTEST/data</directory>
-				<includes>
-					<include>**/*.*</include>
-				</includes>
-			</resource>
+
+            <resource>
+                <directory>src/test/java/com/SDETTEST/SDETTest</directory>
+               <includes>
+                    <include>**/*</include>
+                </includes>
+                <excludes>
+                    <exclude>com/**</exclude>
+                    <exclude>*.java</exclude>
+                </excludes>
+                <filtering>true</filtering>
+            </resource>
 		</resources>
 		<plugins>
 			<plugin>
